--- a/index.html
+++ b/index.html
@@ -1,15 +1,496 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <title>Kugoo</title>
 </head>
+
 <body>
-  
+
+  <head>
+    <nav class="navbar">
+      <div class="container">
+        <div class="header-nav-wrapper">
+          <div class="header-nav-menu-wrapper">
+            <ul class="header-nav">
+              <li class="header-nav-item">
+                <a href="#!" class="header-nav-link">Сервис</a>
+              </li>
+              <li class="header-nav-item">
+                <a href="#!" class="header-nav-link">Сотрудничество</a>
+              </li>
+              <li class="header-nav-item">
+                <a href="#!" class="header-nav-link">Заказать звонок</a>
+              </li>
+            </ul>
+            <div class="header-nav-social">
+              <a href="#!" class="header-nav-social-link">
+                <svg class="nav-social-icon">
+                  <use href="./img/sprite.svg#viber"></use>
+                </svg>
+              </a>
+              <a href="#!" class="header-nav-social-link">
+                <svg class="nav-social-icon">
+                  <use href="./img/sprite.svg#whatsapp"></use>
+                </svg>
+              </a>
+              <a href="#!" class="header-nav-social-link">
+                <svg class="nav-social-icon">
+                  <use href="./img/sprite.svg#telegram"></use>
+                </svg>
+              </a>
+            </div>
+          </div>
+          <div class="header-phone">
+            <a href="tel:+78005055461" class="header-phone-link">+7 (800) 505-54-61</a>
+          </div>
+        </div>
+        <div class="search">
+          <p class="title logo">KUGOO</p>
+          <button class="button search-button">
+            <svg class="button-burger-icon">
+              <use href="./img/sprite.svg#burger"></use>
+            </svg>
+            <p class="button-burger-text">Каталог</p>
+          </button>
+          <form action="#" class="search-form">
+            <div class="search-wrapper">
+              <input type="search" name="q" placeholder="Искать самокат KUGO">
+              <button type="submit" class="button button-search">
+                <svg class="search-icon">
+                  <use href="./img/sprite.svg#search"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+          <ul class="control-block">
+            <li class="control-block-item">
+              <a href="#!" class="control-block-link">
+                <svg class="control-block-icon">
+                  <use href="./img/sprite.svg#scales"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="control-block-item">
+              <a href="#!" class="control-block-link">
+                <svg class="control-block-icon">
+                  <use href="./img/sprite.svg#heart"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="control-block-item">
+              <a href="#!" class="control-block-link">
+                <svg class="control-block-icon">
+                  <use href="./img/sprite.svg#shopping-cart"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="control-block-item">
+              <a href="#!" class="control-block-link">
+                <p class="control-block-text">Корзина</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </head>
+
+  <section class="section main">
+    <div class="main-img">
+      <div class="container">
+        <div class="main-content">
+          <div class="main-content-text-block">
+            <div class="adress">
+              <svg class="adress-icon">
+                <use href="./img/sprite.svg#pin"></use>
+              </svg>
+              <p class="adress-info-text">Восточно-Кругликовская улица, 86</p>
+              <p class="time-info-text">Вт - Сб 10:00 - 20:00</p>
+            </div>
+          </div>
+          <h1 class="title title-color-light title-main">Запишитесь на бесплатный тест-драйв электросамокатов</h1>
+          <p class="main-text">в Москве без ограничения по времени</p>
+          <ul class="main-content-elements">
+            <li class="main-content-element">
+              <div class="main-element-icon-wrapper">
+                <svg class="main-element-icon">
+                  <use href="./img/sprite.svg#scooter"></use>
+                </svg>
+              </div>
+              <p class="main-content-element-text">Поймете, какая модель вам подходит</p>
+            </li>
+            <li class="main-content-element">
+              <div class="main-element-icon-wrapper">
+                <svg class="main-element-icon">
+                  <use href="./img/sprite.svg#energy"></use>
+                </svg>
+              </div>
+              <p class="main-content-element-text">Проверите лучшие самокаты в деле</p>
+            </li>
+          </ul>
+          <button class="button-light main-button">Записаться</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section promo-block">
+    <div class="container">
+      <div class="promo-block-wrapper">
+        <h2 class="title promo-block-title">Определите максимально подходящую вам модель не теоретически, а на практике</h2>
+        <div class="promo-block-description">
+          <h3 class="title-size-M">Тест-драйв поможет:</h3>
+          <ul class="promo-block-list">
+            <li class="promo-block-list-item">
+              <svg class="promo-block-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Понять подходит ли вам конкретная модель;
+            </li>
+            <li class="promo-block-list-item">
+              <svg class="promo-block-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Испытать самокат в «реальной жизни»;
+            </li>
+            <li class="promo-block-list-item">
+              <svg class="promo-block-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Оценить удобство хранения и эксплуатации;
+            </li>
+            <li class="promo-block-list-item">
+              <svg class="promo-block-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Узнать реальные характеристики и возможности модели.
+            </li>
+          </ul>
+          <picture class="promo-block1-img">
+            <source type="image/webp" srcset="img/promo-block1.webp">
+            <source type="image/jpg" srcset="img/promo-block1.jpg">
+            <img src="./img/promo-block1.jpg" alt="Картинка промо блок">
+          </picture>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <section class="section promo-block-2">
+    <div class="container promo-block-content">
+      <div class="promo-block-2-wrapper">
+        <h2 class="title promo-block-2-title">Научим правильной и безопасной езде в городе вас или вашего ребенка</h2>
+        <div class="promo-block-2-description">
+          <h3 class="title-size-M">На обучении специалист расскажет:</h3>
+          <ul class="promo-block-2-list">
+            <li class="promo-block-2-list-item">
+              <svg class="promo-block-2-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Как подготовить самокат к поездке;
+            </li>
+            <li class="promo-block-2-list-item">
+              <svg class="promo-block-2-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Как «завести» самокат;
+            </li>
+            <li class="promo-block-2-list-item">
+              <svg class="promo-block-2-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Как вести себя во время поездки и обезопасить себя и окружающих;
+            </li>
+            <li class="promo-block-2-list-item">
+              <svg class="promo-block-2-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Как складывать и раскладывать электросамокат;
+            </li>
+            <li class="promo-block-2-list-item">
+              <svg class="promo-block-2-icon">
+                <use href="./img/sprite.svg#check"></use>
+              </svg>
+              Как ухаживать за своим девайсом.
+            </li>
+          </ul>
+        </div>
+      </div>
+      <picture class="promo-block-2-img">
+        <source type="image/webp" srcset="img/promo-block2.webp">
+        <source type="image/jpg" srcset="img/promo-block2.jpg">
+        <img src="./img/promo-block2.jpg" alt="Картинка промо блок">
+      </picture>
+    </div>
+  </section>
+
+  <section class="section product">
+    <div class="container">
+      <h2 class="title product-title">Сейчас для тест-драйва и обучения доступны следующие модели</h2>
+      <div class="product-cards-wrapper">
+        <div class="product-card">
+          <picture class="product-card-img">
+            <source type="image/webp" srcset="img/scooter.webp">
+            <source type="image/jpg" srcset="img/scooter.jpg">
+            <img src="./img/scooter.jpg" alt="Картинка промо блок">
+          </picture>
+          <div class="product-card-top">
+            <div class="marker-hit-wrapper">
+              <p class="marker-hit">ХИТ</p>
+            </div>
+            <svg class="product-card-icon">
+              <use href="./img/sprite.svg#scales"></use>
+            </svg>
+          </div>
+          <div class="product-card-footer">
+            <div class="product-card-description">
+              <h2 class="title title-size-M product-card-title">Kugoo Kirin M4</h2>
+            </div>
+            <ul class="product-card-feature">
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#accumulator"></use>
+                </svg>
+                2000 mAh
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#power"></use>
+                </svg>
+                1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#timer"></use>
+                </svg>
+                5 часов
+              </li>
+            </ul>
+            <div class="price-block">
+              <div class="price">
+                <p class="price-old">39 900 ₽</p>
+                <p class="price-new">29 900 ₽</p>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#shopping"></use>
+                </svg>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#heart"></use>
+                </svg>
+              </div>
+            </div>
+            <button class="button product-button">Записаться на тест-драйв</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <picture class="product-card-img">
+            <source type="image/webp" srcset="img/scooter.webp">
+            <source type="image/jpg" srcset="img/scooter.jpg">
+            <img src="./img/scooter.jpg" alt="Картинка промо блок">
+          </picture>
+          <div class="product-card-top">
+            <div class="marker-new-wrapper">
+              <p class="marker-new">Новинка</p>
+            </div>
+            <svg class="product-card-icon">
+              <use href="./img/sprite.svg#scales"></use>
+            </svg>
+          </div>
+          <div class="product-card-footer">
+            <div class="product-card-description">
+              <h2 class="title title-size-M product-card-title">Kugoo Kirin M4</h2>
+            </div>
+            <ul class="product-card-feature">
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#accumulator"></use>
+                </svg>
+                2000 mAh
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#power"></use>
+                </svg>
+                1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#timer"></use>
+                </svg>
+                5 часов
+              </li>
+            </ul>
+            <div class="price-block">
+              <div class="price">
+                <p class="price-old">39 900 ₽</p>
+                <p class="price-new">29 900 ₽</p>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#shopping"></use>
+                </svg>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#heart"></use>
+                </svg>
+              </div>
+            </div>
+            <button class="button product-button">Записаться на тест-драйв</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <picture class="product-card-img">
+            <source type="image/webp" srcset="img/scooter.webp">
+            <source type="image/jpg" srcset="img/scooter.jpg">
+            <img src="./img/scooter.jpg" alt="Картинка промо блок">
+          </picture>
+          <div class="product-card-top">
+            <div class="marker-hit-wrapper">
+              <p class="marker-hit">ХИТ</p>
+            </div>
+            <svg class="product-card-icon">
+              <use href="./img/sprite.svg#scales"></use>
+            </svg>
+          </div>
+          <div class="product-card-footer">
+            <div class="product-card-description">
+              <h2 class="title title-size-M product-card-title">Kugoo Kirin M4</h2>
+            </div>
+            <ul class="product-card-feature">
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#accumulator"></use>
+                </svg>
+                2000 mAh
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#power"></use>
+                </svg>
+                1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#timer"></use>
+                </svg>
+                5 часов
+              </li>
+            </ul>
+            <div class="price-block">
+              <div class="price">
+                <p class="price-old">39 900 ₽</p>
+                <p class="price-new">29 900 ₽</p>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#shopping"></use>
+                </svg>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#heart"></use>
+                </svg>
+              </div>
+            </div>
+            <button class="button product-button">Записаться на тест-драйв</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <picture class="product-card-img">
+            <source type="image/webp" srcset="img/scooter.webp">
+            <source type="image/jpg" srcset="img/scooter.jpg">
+            <img src="./img/scooter.jpg" alt="Картинка промо блок">
+          </picture>
+          <div class="product-card-top">
+            <div class="marker-new-wrapper">
+              <p class="marker-new">Новинка</p>
+            </div>
+            <svg class="product-card-icon">
+              <use href="./img/sprite.svg#scales"></use>
+            </svg>
+          </div>
+          <div class="product-card-footer">
+            <div class="product-card-description">
+              <h2 class="title title-size-M product-card-title">Kugoo Kirin M4</h2>
+            </div>
+            <ul class="product-card-feature">
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#accumulator"></use>
+                </svg>
+                2000 mAh
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#power"></use>
+                </svg>
+                1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#timer"></use>
+                </svg>
+                5 часов
+              </li>
+            </ul>
+            <div class="price-block">
+              <div class="price">
+                <p class="price-old">39 900 ₽</p>
+                <p class="price-new">29 900 ₽</p>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#shopping"></use>
+                </svg>
+              </div>
+              <div class="price-block-icon-wrapper">
+                <svg class="price-block-icon">
+                  <use href="./img/sprite.svg#heart"></use>
+                </svg>
+              </div>
+            </div>
+            <button class="button product-button">Записаться на тест-драйв</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./js/main.js"></script>
 </body>
+
 </html>
