--- a/index.html
+++ b/index.html
@@ -88,10 +88,6 @@
                 <svg class="control-block-icon">
                   <use href="./img/sprite.svg#shopping-cart"></use>
                 </svg>
-              </a>
-            </li>
-            <li class="control-block-item">
-              <a href="#!" class="control-block-link">
                 <p class="control-block-text">Корзина</p>
               </a>
             </li>
@@ -143,7 +139,7 @@
   <section class="section promo-block">
     <div class="container">
       <div class="promo-block-wrapper">
-        <h2 class="title promo-block-title">Определите максимально подходящую вам модель не теоретически, а на практике</h2>
+        <h2 class="title promo-block-title">Определите максимально подходящую вам модель не&nbsp;теоретически, а на практике</h2>
         <div class="promo-block-description">
           <h3 class="title-size-M">Тест-драйв поможет:</h3>
           <ul class="promo-block-list">
@@ -186,7 +182,7 @@
   <section class="section promo-block-2">
     <div class="container promo-block-content">
       <div class="promo-block-2-wrapper">
-        <h2 class="title promo-block-2-title">Научим правильной и безопасной езде в городе вас или вашего ребенка</h2>
+        <h2 class="title promo-block-2-title">Научим правильной и&nbsp;безопасной езде в городе вас или вашего ребенка</h2>
         <div class="promo-block-2-description">
           <h3 class="title-size-M">На обучении специалист расскажет:</h3>
           <ul class="promo-block-2-list">
@@ -242,9 +238,7 @@
             <img src="./img/scooter.jpg" alt="Картинка промо блок">
           </picture>
           <div class="product-card-top">
-            <div class="marker-hit-wrapper">
-              <p class="marker-hit">ХИТ</p>
-            </div>
+            <p class="marker marker-hit">ХИТ</p>
             <svg class="product-card-icon">
               <use href="./img/sprite.svg#scales"></use>
             </svg>
@@ -262,15 +256,15 @@
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
-                  <use href="./img/sprite.svg#speedometer"></use>
-                </svg>
-                60 км/ч
-              </li>
-              <li class="product-card-feature-item">
-                <svg class="product-card-feature-icon">
                   <use href="./img/sprite.svg#power"></use>
                 </svg>
                 1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
@@ -284,15 +278,17 @@
                 <p class="price-old">39 900 ₽</p>
                 <p class="price-new">29 900 ₽</p>
               </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#shopping"></use>
-                </svg>
-              </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#heart"></use>
-                </svg>
+              <div class="price-block-icons">
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#shopping"></use>
+                  </svg>
+                </a>
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#heart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
             <button class="button product-button">Записаться на тест-драйв</button>
@@ -305,9 +301,7 @@
             <img src="./img/scooter.jpg" alt="Картинка промо блок">
           </picture>
           <div class="product-card-top">
-            <div class="marker-new-wrapper">
-              <p class="marker-new">Новинка</p>
-            </div>
+            <p class="marker marker-new">Новинка</p>
             <svg class="product-card-icon">
               <use href="./img/sprite.svg#scales"></use>
             </svg>
@@ -325,15 +319,15 @@
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
-                  <use href="./img/sprite.svg#speedometer"></use>
-                </svg>
-                60 км/ч
-              </li>
-              <li class="product-card-feature-item">
-                <svg class="product-card-feature-icon">
                   <use href="./img/sprite.svg#power"></use>
                 </svg>
                 1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
@@ -347,15 +341,17 @@
                 <p class="price-old">39 900 ₽</p>
                 <p class="price-new">29 900 ₽</p>
               </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#shopping"></use>
-                </svg>
-              </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#heart"></use>
-                </svg>
+              <div class="price-block-icons">
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#shopping"></use>
+                  </svg>
+                </a>
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#heart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
             <button class="button product-button">Записаться на тест-драйв</button>
@@ -368,9 +364,7 @@
             <img src="./img/scooter.jpg" alt="Картинка промо блок">
           </picture>
           <div class="product-card-top">
-            <div class="marker-hit-wrapper">
-              <p class="marker-hit">ХИТ</p>
-            </div>
+            <p class="marker marker-hit">ХИТ</p>
             <svg class="product-card-icon">
               <use href="./img/sprite.svg#scales"></use>
             </svg>
@@ -388,15 +382,15 @@
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
-                  <use href="./img/sprite.svg#speedometer"></use>
-                </svg>
-                60 км/ч
-              </li>
-              <li class="product-card-feature-item">
-                <svg class="product-card-feature-icon">
                   <use href="./img/sprite.svg#power"></use>
                 </svg>
                 1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
@@ -410,15 +404,17 @@
                 <p class="price-old">39 900 ₽</p>
                 <p class="price-new">29 900 ₽</p>
               </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#shopping"></use>
-                </svg>
-              </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#heart"></use>
-                </svg>
+              <div class="price-block-icons">
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#shopping"></use>
+                  </svg>
+                </a>
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#heart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
             <button class="button product-button">Записаться на тест-драйв</button>
@@ -431,9 +427,7 @@
             <img src="./img/scooter.jpg" alt="Картинка промо блок">
           </picture>
           <div class="product-card-top">
-            <div class="marker-new-wrapper">
-              <p class="marker-new">Новинка</p>
-            </div>
+            <p class="marker marker-new">Новинка</p>
             <svg class="product-card-icon">
               <use href="./img/sprite.svg#scales"></use>
             </svg>
@@ -451,15 +445,15 @@
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
-                  <use href="./img/sprite.svg#speedometer"></use>
-                </svg>
-                60 км/ч
-              </li>
-              <li class="product-card-feature-item">
-                <svg class="product-card-feature-icon">
                   <use href="./img/sprite.svg#power"></use>
                 </svg>
                 1,2 л.с.
+              </li>
+              <li class="product-card-feature-item">
+                <svg class="product-card-feature-icon">
+                  <use href="./img/sprite.svg#speedometer"></use>
+                </svg>
+                60 км/ч
               </li>
               <li class="product-card-feature-item">
                 <svg class="product-card-feature-icon">
@@ -473,15 +467,17 @@
                 <p class="price-old">39 900 ₽</p>
                 <p class="price-new">29 900 ₽</p>
               </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#shopping"></use>
-                </svg>
-              </div>
-              <div class="price-block-icon-wrapper">
-                <svg class="price-block-icon">
-                  <use href="./img/sprite.svg#heart"></use>
-                </svg>
+              <div class="price-block-icons">
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#shopping"></use>
+                  </svg>
+                </a>
+                <a href="!#" class="price-block-icon-link">
+                  <svg class="price-block-icon">
+                    <use href="./img/sprite.svg#heart"></use>
+                  </svg>
+                </a>
               </div>
             </div>
             <button class="button product-button">Записаться на тест-драйв</button>
@@ -490,6 +486,130 @@
       </div>
     </div>
   </section>
+
+  <section class="section cta-section">
+    <div class="cta-bg">
+      <div class="container cta">
+        <picture class="cta-img">
+          <source type="image/webp" srcset="img/woman.webp">
+          <source type="image/jpg" srcset="img/woman.jpg">
+          <img src="./img/woman.jpg" alt="cta">
+        </picture>
+        <div class="cta-content">
+          <h2 class="title cta-title">Нет нужной модели, которую хотите протестировать?</h2>
+          <p class="cta-text">Оставьте заявку, и менеджер подберет нужный самокат</p>
+          <div class="cta-form-wrapper">
+            <form action="#" class="cta-form">
+              <div class="input-group">
+                <input type="tel" class="input-user-phone" placeholder="+7 (___) __ - __ - __">
+              </div>
+            </form>
+            <button class="button cta-button">Оставить заявку на тест-драйв</button>
+          </div>
+          <div class="checkboxes-item">
+            <label class="checkbox-label">
+              <input type="checkbox" class="checkbox-input"/>
+              <span class="checkbox-checkmark"></span>
+              <span class="checkbox-body">Нажимая на кнопку, вы соглашаетесь на обработку персональных данных и политикой конфиденциальности</span>
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section cta-email">
+    <div class="cta-email-bg">
+      <div class="container">
+        <div class="cta-email-wrapper">
+          <p class="cta-email-text">
+            Оставьте свою почту и станьте первым, кто получит скидку на новые самокаты
+          </p>
+          <div class="footer-input-form">
+            <div class="cta-email-input-group">
+              <input type="email" class="input-email" placeholder="Введите Ваш email">
+            </div>
+            <button class="button-light cta-email-button">Подписаться</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-bg">
+      <div class="container">
+        <div class="footer-top">
+          <div class="footer-top-list-wrapper">
+            <h3 class="title-size-M footer-top-title">Каталог товаров</h3>
+            <ul class="footer-top-list-catalog">
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Электросамокаты</a>
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Электроскутеры</a>
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Электровелосипеды</a>
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Электровелосипеды</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-top-list-wrapper">
+            <h3 class="title-size-M footer-top-title">Покупателям</h3>
+            <ul class="footer-top-list-buyer">
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Сервисный центр</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Доставка и оплата</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Рассрочка</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Тест-драйв</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Блог</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Сотрудничество</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Контакты</a>  
+              </li>
+              <li class="footer-top-item">
+                <a class="footer-top-item-link" href="!#">Акции</a>  
+              </li>
+            </ul>
+          </div>
+          <div class="footer-top-list-wrapper">
+            <h3 class="title-size-M footer-top-title">Контакты</h3>
+            <div class="footer-top-contact-wrapper">
+              <div class="footer-top-contact">
+                <span class="footer-phone-description">Call-центр</span>
+                <a href="tel:+78005055461" class="footer-phone">+7 (800) 505-54-61</a>
+                <p class="footer-phone-time">Пн-Вс 10:00 - 20:00</p>
+              </div>
+              <div class="footer-top-contact">
+                <span class="footer-phone-description">Сервисный центр</span>
+                <a href="tel:+74993507692" class="footer-phone">+7 (499) 350-76-92</a>
+                <p class="footer-phone-time">Пн-Вс 10:00 - 20:00</p>
+              </div>
+            </div>
+          </div>
+          <a href="#!" class="footer-call-link">Заказать звонок</a>
+        </div>
+        <div class="footer-social">
+          <h2 class="title">Kugoo</h2>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="./js/main.js"></script>
 </body>
 
